# fastshelf

./: README.md  setup.cfg
src/: RocksDB.py  shelf.py
src/fastshelf/: PlyvelDB.py  __init__.py
tests/: demo.py  tests.py
