[metadata]
name = fastshelf
version = 0.1.3
author = Ligon Liu
author_email = ligonliu1@gmail.com
description = high performance persistent python dict with choices of backend
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ligonliu/fastshelf
project_urls =
    Bug Tracker = https://github.com/ligonliu/fastshelf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.4
install_requires = bidict

[options.packages.find]
where = src
